issue-22 fix figcaption alignment

--- a/assets/css/views/_post.scss
+++ b/assets/css/views/_post.scss
@@ -312,9 +312,15 @@
       display: block;
       text-align: center;
       font-style: normal;
-      margin-top: 10px;
+      margin-top: 8px;
       color: $text-color-gray;
     }
+  }
+
+  figcaption {
+    text-align: center;
+    color: $text-color-gray;
+    margin-top: 8px;
   }
 
   .paragraph {
